Configuracion de ServiceWorker para guardar en cache los datos de los horarios de cada estación.
Modificaciones necesarias para integrar nativamente las aplicaciones a Android y iOS.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paris Métro 1</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
-
+  <link rel="manifest" href="/manifest.json">
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Weather PWA">
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#2F3BA2">
+<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAgDISPZC1Q_BlAFUjFlE-aHOJKqA3AQKI",
+    authDomain: "taller2-67c2e.firebaseapp.com",
+    databaseURL: "https://taller2-67c2e.firebaseio.com",
+    projectId: "taller2-67c2e",
+    storageBucket: "",
+    messagingSenderId: "449193658502"
+  };
+  firebase.initializeApp(config);
+</script>
 </head>
 <body>
 
