Cambio de proyecto firebase

--- a/index.html
+++ b/index.html
@@ -31,18 +31,20 @@
   <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
   <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
+
 </head>
 <body>
+
 <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyAgDISPZC1Q_BlAFUjFlE-aHOJKqA3AQKI",
-    authDomain: "taller2-67c2e.firebaseapp.com",
-    databaseURL: "https://taller2-67c2e.firebaseio.com",
-    projectId: "taller2-67c2e",
-    storageBucket: "",
-    messagingSenderId: "449193658502"
+    apiKey: "AIzaSyCiF7eU8PI8tGzPe9BUON7-tsqCTeE17MQ",
+    authDomain: "talle1miso.firebaseapp.com",
+    databaseURL: "https://talle1miso.firebaseio.com",
+    projectId: "talle1miso",
+    storageBucket: "talle1miso.appspot.com",
+    messagingSenderId: "84904798427"
   };
   firebase.initializeApp(config);
 </script>
